Add program that generates garbage